log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-data
          emptyDir: {}
      containers:
        - name: log-writer
          image: log-writer
          imagePullPolicy: Never
          volumeMounts: 
          - name: shared-data
            mountPath: /usr/src/app/files
        - name: log-reader
          image: log-reader
          imagePullPolicy: Never
          volumeMounts: 
          - name: shared-data
            mountPath: /usr/src/app/files
