log-output/manifests/pingpong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: ping-pong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      # volumes:
      #   - name: shared-data
      #     persistentVolumeClaim:
      #       claimName: data-claim
      containers:
        - name: ping-pong
          image: europe-north1-docker.pkg.dev/dwk-gke-502612/dwk-repository/ping-pong:v3
          imagePullPolicy: IfNotPresent
          # volumeMounts:
          # - name: shared-data
          #   mountPath: /usr/src/app/files
