log-output/manifests/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: ping-pong-svc
spec:
  type: LoadBalancer
  selector:
    app: ping-pong
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
