log-output/manifests/pingpong-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: ping-pong-svc
spec:
  type: NodePort
  selector:
    app: ping-pong
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
