log-output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: log-output-svc
spec:
  type: NodePort
  selector:
    app: log-output
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
